# mcp_browser_tools

./: .gitignore  API_REFERENCE.md  LICENSE  MANIFEST.in  README.md  USAGE_GUIDE.md  check_mcp_compliance.py  check_package.py  check_server.py  final_report.md  main.py  mcp_compliance_report.md  pyproject.toml  quick_check.py  run_sse_example.py  run_with_stdio.py  setup.py  simple_mcp_check.py  simple_test.py  sse_client_example.py  test_server.py  test_server_fix.py  test_tools.py  tool_check_report.md  verify_package.py  verify_server_start.py  优化说明.md  使用指南.md  重构总结.md
mcp_browser_tools/: __init__.py  __main__.py  browser_tools.py  config.py  server.py  sse_server.py  transport.py
mcp_browser_tools/browser/: __init__.py  manager.py  tools.py
mcp_browser_tools/transports/: __init__.py  base.py  http_stream.py  sse.py  stdio.py
mcp_browser_tools/utils/: __init__.py  logging.py  validation.py
tests/: test_browser_tools.py
